--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tia's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="screen and (max-width:530px)" href="phone.css">
 </head> 
@@ -19,7 +19,7 @@
     </nav>
     <section id="home">
         <div class="main">
-            <h1 Class="headings">I AM <br> TIA MICHAELS</h1>
+            <h1 Class="headings">TIA MICHAELS</h1>
             <button class="button">
                 Hire Me
             </button>
