--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href='#home'>Home</a></li>
         <li><a href='#about'>About Me</a></li>
-        <li><a href='#portfolio'>Portfolio</a></li>
+        <li><a href='#my work'>My Work</a></li>
         <li><a href='#services'>Services</a></li>
         <li><a href='#contact'>Contact Me</a></li>
     </ul>
@@ -22,6 +22,7 @@
             <h1 Class="headings">TIA MICHAELS</h1>
             <button class="button">
                 Hire Me
+
             </button>
         </div>
     </section>
@@ -37,8 +38,8 @@
         </div>
     </section>
     
-    <section id="portfolio">
-        <h1 class="headings">PORTFOLIO</h1>
+    <section id="my work">
+        <h1 class="headings">MY WORK</h1>
         <div class= "gallery">
             <img src="Portfolio/img1" alt=""> 
             <img src="Portfolio/img2" alt=""> 
