--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <img src="img2.jpg" alt="">
             <div id="intro">
                 <h2>Tia Michaels</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat non expedita doloribus deserunt alias dolore culpa atque quod voluptas delectus pariatur consequatur eligendi a assumenda ut, iste aliquam tenetur. Aperiam!</p>
+                <p>Aloha!<br>
+                I was born and raised from Charlotte, NC. I have two cats and two dogs, I am also A Polynesian dancer (yes that does mean i know how to hula and tahitian dance. I love learning new things such as web development, it creates new oppourtunities and beginnings as well as memories. Im ready to expand my learning!</p>
             </div>
         </div>
     </section>
