added coffe search

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <section id="my work">
         <h1 class="headings">MY WORK</h1>
         <div class= "gallery">
-            <img src="Portfolio/img1" alt=""> 
+            <img src="coffee.jpg" alt="Coffee">
+            <a href="file:///Users/tiaashleymichaels/Desktop/Project-1-1/index.html">Coffe Search</a>
             <img src="Portfolio/img2" alt=""> 
             <img src="Portfolio/img3" alt=""> 
 
