--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
         <div class= "gallery">
             <img src="coffee.jpg" alt="Coffee">
             <a href="file:///Users/tiaashleymichaels/Desktop/Project-1-1/index.html">Coffe Search</a>
-            <img src="Portfolio/img2" alt=""> 
             <img src="Portfolio/img3" alt=""> 
 
+        <div class= "gallery">
+            <img src="Login.jpg" alt="Login">
+            <a href="https://tmichae4.github.io/Project2/">Electro-Enthuiast</a>
         </div>
     </section>
-
     <section id="services">
         <h1 class="headings">SERVICES</h1>
 
