--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@
         <div class= "gallery">
             <img src="coffee.jpg" alt="Coffee">
             <a href="file:///Users/tiaashleymichaels/Desktop/Project-1-1/index.html">Coffe Search</a>
-            <img src="Portfolio/img3" alt=""> 
-
+            
         <div class= "gallery">
             <img src="Login.jpg" alt="Login">
             <a href="https://tmichae4.github.io/Project2/">Electro-Enthuiast</a>
+        </div>
+        <div class= "gallery">
+            <img src="blinddate.gif" alt="blind-date">
+            <a href="https://secret-journey-36348.herokuapp.com/">Blind-Date</a>
         </div>
     </section>
     <section id="services">
